Renamed to simple starvation

--- a/Starvation/SimpleStarvation/SimpleStarvation.csproj
+++ b/Starvation/SimpleStarvation/SimpleStarvation.csproj
@@ -5,6 +5,7 @@
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <OutputPath>bin\$(Configuration)\Mods\mod</OutputPath>
         <Nullable>enable</Nullable>
+        <RootNamespace>Starvation</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
